# blog-data

./: cr.yaml  mongod-secrets.yaml  s3-secrets.yaml
ai-agents-infra/: 01_crew.py  02_crew.py  agents.py  llms.py  tasks.py  tools.py
ai-assistant/: imaginary-family.csv  test_agent.py
bootstrap-postgresql-k8s/: 01-demo-init.yaml  02-deploy-cr.yaml  03-deploy-cr2.yaml  04-deploy-cr.yaml  05-deploy-cr3.yaml
crossplane-provider-sql/: README.md  crossplane-db.yaml  crossplane-grants.yaml  crossplane-mysql-config.yaml  crossplane-provider-sql.yaml  crossplane-secret.yaml  crossplane-user.yaml  runbook.txt  user-secret.yaml
database-ai-agent-part1/: 0_langchain_gemini_test.py  1_langchain_gemini_postgresql.py
everest-ingress-ssl/: 01-ingress.yaml  02-issuer-staging.yaml  03-ingress-tls-staging.yaml  04-issuer-prod.yaml  05-ingress-tls-prod.yaml
gitops-argocd-mongodb/: argo-percona-clusters.yaml  argo-percona-operator.yaml
gitops-argocd-postgresql/: argo-test.yaml  bundle.yaml  cr.yaml
gitops-mongo/: argo_psmdb_db.yaml  argo_psmdb_operator.yaml  cr.yaml
gitops-mysql/: README.md  cr.yaml
google-io-2025-ai/: deep-think.md
hcp-mysql-kubernetes/: README.md  cr.yaml  db_password.json
mcs-eks-mongo/: cr1.yaml  cr2.yaml  eks-cluster-mcs-1.yaml  eks-cluster-mcs-2.yaml  kubernetes.sh  setup-aws.sh
openhands-experiment/: CHANGELOG.md  LICENSE  README.md  example.py  pyproject.toml  requirements.txt
openhands-experiment/tests/: __init__.py  test_client.py  test_server.py
openhands-experiment/timeweb_mcp_server/: __init__.py  client.py  server.py
(+122 files in other folders)
